--- a/styles.css
+++ b/styles.css
@@ -51,25 +51,39 @@ i { font-style: italic; }
 .row{
 	display:grid;
 	border-bottom: 1px solid #000;
+	padding-top: 0.2em;
+	padding-bottom: 0.2em;
 }
 .cell{
 	border: 1px solid transparent;
   	word-wrap: break-word;
-  	padding: 0.2em;
+  	box-sizing: border-box;
 }
-.class{
+.classday{
 	background-color: #000;
 	color: yellow;
 }
-.date, .day{
-	letter-spacing: 0.04em;
+.infoCont{
+	display: grid;
+	grid-template-columns: 33.3333% 33.3333% 33.3333%;
+	grid-template-rows: auto;
+}
+.infoCont .cell{
+	padding-left: 0.2em;
+  	padding-right: 0.2em;
+  	letter-spacing: 0.04em;
+}
+.notes{
+	padding-left: 0.2em;
+	padding-right: 0.2em;
+
 }
 
-@media only screen and (min-device-width: 320px) 
+@media not all and (hover: none) and (min-device-width: 320px) 
   and (max-device-width: 812px) 
   and (orientation: portrait) {
 	.row{
-		grid-template-columns:33.3333vw 33.3333vw 33.3333vw;
+		grid-template-columns:100vw;
 		grid-template-rows:auto auto;
 	}
 	.cell{
@@ -77,26 +91,34 @@ i { font-style: italic; }
 	}
 	.info{
 		border-right: 1px dashed #000;
-		border-bottom: 1px dashed #000;
+		/*border-bottom: 1px dashed #000;*/
 	}
-	.class .info{
+	.infoCont{
+		padding-bottom: 0.2em;
+	}
+	.classday .info{
 		border-right: 1px dashed yellow;
-		border-bottom: 1px dashed yellow;
+		/*border-bottom: 1px dashed yellow;*/
 	}
-	.class .mood, .mood{
+	.classday .mood, .mood{
 		border-right: 1px solid transparent;
 	}
 	.notes{
-		grid-column: 1/4;
+		padding-top: 0.2em;
+		border-top: 1px dashed #000;
+		grid-column: 1/2;
 		grid-row: 2/3;
+	}
+	.classday .notes{
+		border-top: 1px dashed yellow;
 	}
 }
 
-@media only screen and (min-device-width: 320px) 
+@media not all and (hover: none) and (min-device-width: 320px) 
   and (max-device-width: 900px) 
   and (orientation: landscape) {
 	.row{
-		grid-template-columns:33.3333vw 33.3333vw 33.3333vw;
+		grid-template-columns:100vw;
 		grid-template-rows:auto auto;
 	}
 	.cell{
@@ -104,55 +126,82 @@ i { font-style: italic; }
 	}
 	.info{
 		border-right: 1px dashed #000;
-		border-bottom: 1px dashed #000;
+		/*border-bottom: 1px dashed #000;*/
 	}
-	.class .info{
+	.infoCont{
+		padding-bottom: 0.2em;
+	}
+	.classday .info{
 		border-right: 1px dashed yellow;
-		border-bottom: 1px dashed yellow;
+		/*border-bottom: 1px dashed yellow;*/
 	}
-	.class .mood, .mood{
+	.classday .mood, .mood{
 		border-right: 1px solid transparent;
 	}
 	.notes{
-		grid-column: 1/4;
+		padding-top: 0.2em;
+		border-top: 1px dashed #000;
+		grid-column: 1/2;
 		grid-row: 2/3;
 	}
+	.classday .notes{
+		border-top: 1px dashed yellow;
+	}
 }
+
+/* TABLET */
+
 
 /* DESKTOP */
-@media (hover) and (max-width: 800px) {
+@media screen and (max-width: 900px) {
 	.row{
-		grid-template-columns:33.3333vw 33.3333vw 33.3333vw;
+		grid-template-columns:100vw;
 		grid-template-rows:auto auto;
 	}
 	.notes{
-		grid-column: 1/4;
+		padding-top: 0.2em;
+		grid-column: 1/2;
 		grid-row: 2/3;
+		border-top: 1px dashed #000;
+	}
+	.classday .notes{
+		border-top: 1px dashed yellow;
+	}
+	.infoCont{
+		padding-bottom: 0.2em;
 	}
 	.cell{
   		font-size: 1em;
 	}
 	.info{
 		border-right: 1px dashed #000;
-		border-bottom: 1px dashed #000;
+		/*border-bottom: 1px dashed #000;*/
 	}
-	.class .info{
+	.classday .info{
 		border-right: 1px dashed yellow;
-		border-bottom: 1px dashed yellow;
+		/*border-bottom: 1px dashed yellow;*/
 	}
-	.class .mood, .mood{
+	.classday .mood, .mood{
 		border-right: 1px solid transparent;
 	}
 }
 
-@media (hover) and (min-width: 800px){
+@media screen and (min-width: 900px){
 	.row{
-		grid-template-columns:16.6666vw 16.6666vw 16.6666vw 50vw;
+		grid-template-columns:50vw 50vw;
 		grid-template-rows: auto;
 	}
 	.notes{
-		grid-column: 4/5;
+		padding-top: 0;
+		grid-column: 2/3;
 		grid-row: 1/2;
+		border-top: 1px solid transparent;
+	}
+	.classday .notes{
+		border-top: 1px solid transparent;
+	}
+	.infoCont{
+		padding-bottom: 0;
 	}
 	.cell{
   		font-size: 1.25em;
@@ -161,12 +210,12 @@ i { font-style: italic; }
 		border-right: 1px solid #000;
 		border-bottom: 1px solid transparent;
 	}
-	.class .info{
+	.classday .info{
 		border-right: 1px solid yellow;
 		border-bottom: 1px solid transparent;
 	}
 }
-@media (hover) and (min-width: 1200px){
+@media screen and (min-width: 1200px){
 	.cell{
   		font-size: 1.5em;
 	}
