--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,13 @@ body {
 	line-height: 1.2;
 	background-color: yellow;
 }
-
+a{
+	color: #000;
+	cursor: pointer;
+	background-image: url(assets/share-arrow.svg);
+    background-position: center right;
+    background-repeat: no-repeat;
+}
 #journal{
 	width: 100%;
 }
@@ -53,8 +59,6 @@ body {
 }
 .date, .day{
   	letter-spacing: 0.04em;
-}
-.notes{
 }
 
 @media not all and (hover: none) and (min-device-width: 320px) 
@@ -88,9 +92,13 @@ body {
 	.classday .notes{
 		border-top: 1px solid yellow;
 	}
+	a{
+		background-size: 0.64em;
+    	padding-right: 0.7em;
+	}
 }
 
-@media not all and (hover: none) and (min-device-width: 320px) 
+/*@media not all and (hover: none) and (min-device-width: 320px) 
   and (max-device-width: 900px) 
   and (orientation: landscape) {
 	.row{
@@ -122,7 +130,7 @@ body {
 	.classday .notes{
 		border-top: 1px solid yellow;
 	}
-}
+}*/
 
 /* TABLET */
 
@@ -154,6 +162,10 @@ body {
 		border-right: 0px;
 		-webkit-border-right: 0px;
 	}
+	a{
+		background-size: 0.625em;
+    	padding-right: 0.7em;
+	}
 }
 
 @media screen and (min-width: 900px){
@@ -184,9 +196,17 @@ body {
 		border-right: 1px solid yellow;
 		border-bottom: 0px;
 	}
+	a{
+		background-size: 0.65em;
+    	padding-right: 0.7em;
+	}
 }
 @media screen and (min-width: 1200px){
 	.cell{
   		font-size: 1.5em;
+	}
+	a{
+		background-size: 0.7em;
+    	padding-right: 0.8em;
 	}
 }
