--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
 a{
 	color: #000;
 	cursor: pointer;
-	background-image: url(assets/share-arrow.svg);
+	background-image: url(assets/share-arrow2.svg);
     background-position: right;
     background-repeat: no-repeat;
     padding-right: 1em;
