--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,20 @@ body {
 .date, .day{
   	letter-spacing: 0.04em;
 }
+.link{
+	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+	font-size: 0.8em;
+	padding-left: 0.1em;
+}
 a{
 	color: #000;
 	cursor: pointer;
-	background-image: url(assets/share-arrow2.svg);
+	/*background-image: url(assets/share-arrow2.svg);
     background-position: right;
     background-repeat: no-repeat;
     padding-right: 1em;
+    text-decoration-line: underline;
+	text-decoration-thickness: 2px;*/
 }
 
 @media not all and (hover: none) and (min-device-width: 320px) 
