--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
 .cell{
   word-wrap: break-word;
   padding-left: var(--spacing);
+  padding-right: var(--spacing);
   box-sizing: border-box;
 }
 .classday{
@@ -51,7 +52,6 @@ body {
 	color: var(--main-color);
 }
 .infoCont{
-	font-family: 'Times Numeral Roman';
 	display: grid;
 	grid-template-columns: 33.3333% 33.3333% 33.3333%;
 	grid-template-rows: auto;
@@ -63,6 +63,7 @@ body {
 	padding-left: 0;
 }
 .link{
+	font-family: inherit;
 	padding-left: 0.1em;
 }
 a{
