--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,3 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 :root {
   --main-color: #e0d28c;
   --spacing: 0.3em;
@@ -32,7 +8,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
 #journal{
 	width: 100%;
 }
@@ -53,7 +28,7 @@ body {
 }
 .infoCont{
 	display: grid;
-	grid-template-columns: 33.3333% 33.3333% 33.3333%;
+	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: auto;
 }
 .date, .day{
@@ -63,7 +38,7 @@ body {
 	padding-left: 0;
 }
 .link{
-	font-family: inherit;
+	font-family: inherit, arial;
 	padding-left: 0.1em;
 }
 a{
@@ -73,15 +48,16 @@ a{
 }
 
 @media screen and (max-width: 600px){
-
-	/*body{
-		background-color: red;
-	}*/
-	.day, .rating{
-		text-align: center;
-	}
 	.infoCont{
+		/*grid-template-columns: repeat(3, minmax(min-content, max-content));*/
+		grid-template-columns: repeat(3, max-content);
+		justify-self: center;
 		text-align: center;
+		/*gap: 1em;*/
+		gap: 5vw;
+	}
+	.infoCont .cell{
+		padding: 0;
 	}
 	.row{
 		grid-template-columns:100%;
@@ -90,37 +66,22 @@ a{
 	.cell{
   	font-size: 14px;
 	}
-	/*.infoCont{
-		font-size: 1.2em;
-	}*/
 	.infoCont{
-		/*padding-bottom: var(--spacing);*/
 		border-bottom: 0px;
-	}
-	.info{
-		/*border-right: 1px solid #000;*/
-	}
-	.classday .info{
-		/*border-right: 1px solid var(--main-color);*/
 	}
 	.classday .rating, .rating{
 		border-right: 0px;
 	}
 	.notes{
-		padding-left: 0;
-		/*padding-top: var(--spacing);*/
-		/*border-top: 1px solid #000;*/
+		padding: 0;
 		grid-column: 1/2;
 		grid-row: 2/3;
-	}
-	.classday .notes{
-		/*border-top: 1px solid var(--main-color);*/
 	}
 }
 
 @media screen and (min-width: 600px){
 	.row{
-		grid-template-columns:50% 50%;
+		grid-template-columns:repeat(2, 50%);
 		grid-template-rows: auto;
 	}
 	.cell{
