--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,7 @@
 :root{
-/*  --main-color: #e0d290;*/
-/*  --main-color: #eee; */
   --main-color: gainsboro;
-  --spacing: 0.7em;
+  --spacing: 0.75em;
 }
-@font-face {
-font-family:"neue-haas-grotesk-display";
-src:url("https://use.typekit.net/af/1ba16c/00000000000000007735bb5a/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/1ba16c/00000000000000007735bb5a/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/1ba16c/00000000000000007735bb5a/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
-font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
-}
-
-@font-face{
-  font-family: myriad-italic;
-  src: url(assets/MyriadPro-It.otf);
-}
-
-@font-face{
-  font-family: myriad-light;
-  src: url(assets/myriadpro-light-webfont.woff);
-}
-
-
-
 
 @font-face{
 	font-family: freeSans-regular;
@@ -35,25 +15,25 @@ font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
 
 body{
 	font-family: freeSans-regular;
-	line-height: 1.5;
-	margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  max-width: 1200px;
-  font-size: 1rem;
-}
-#journal{
 	width: 100%;
-	
+	max-width: 1240px;
+	line-height: 1.5;
 	letter-spacing: 0.02rem;
-	border: 1px solid black;
+	
+	border-bottom: 0px solid transparent;
 	box-sizing: border-box;
 }
+#journal{
+	margin:1em;
+	border: 1px solid black;
+	border-bottom: none;
+}
+
 .row{
 	display: grid;
 	box-sizing: border-box;
 	border-bottom: 1px solid #000;
-	padding: 0.5rem 0.7rem;
+	padding: 0.5rem 0.75rem;
 }
 .cell{
   word-wrap: break-word;
@@ -73,7 +53,9 @@ body{
 }
 .date, .day{
   letter-spacing: 0.02em;
+/*  white-space:nowrap;*/
 }
+.nobr { white-space:nowrap; }
 .date{
 	padding-left: 0;
 }
@@ -107,8 +89,8 @@ li::before {
 
 
 @media screen and (max-width: 600px){
-	#journal{
-  	font-size: 14px;
+	body{
+  	font-size: 13px;
 	}
 	.infoCont{
 		/*grid-template-columns: repeat(3, minmax(min-content, max-content));*/
@@ -140,9 +122,10 @@ li::before {
 }
 
 @media screen and (min-width: 600px){
-	#journal{
+	body{
   	font-size: 14px;
-  	margin-top:1rem;
+/*  	margin-left: auto;*/
+/*		margin-right: auto;*/
 	}
 	.row{
 		grid-template-columns:repeat(2, 50%);
@@ -172,14 +155,10 @@ li::before {
 }
 
 @media screen and (min-width: 900px){
-	#journal{
+	body{
 		font-size: 20px;
-		margin-top:1rem;
+/*		margin: 1em;*/
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
-
-/*@media screen and (min-width: 1200px){
-	#journal{
-  		font-size: 20px;
-	}
-}*/
