--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,14 @@ body{
 	width: 100%;
 	max-width: 1260px;
 }
+
+
+body{
+  font-size: 20px;
+  margin-left: auto;
+	margin-right: auto;
+}
+
 #journal{
 	margin: 1em;
 	border: 1px solid black;
@@ -38,7 +46,6 @@ body{
 .classday{
 
 }
-
 .infoCont{
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -71,11 +78,27 @@ li::before {
 	margin-left:1em;
 }
 
-@media screen and (max-width: 600px){
-	body{
-  	font-size: 13px;
+.row{
+		grid-template-columns:repeat(2, 50%);
+		grid-template-rows: auto;
 	}
-	.row{
+.notes{
+	padding-right: 0;
+	grid-column: 2/3;
+	grid-row: 1/2;
+}
+
+@media all and (max-width: 1400px) {
+  body{
+    font-size: 17px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  body{
+    font-size: 13px;
+  }
+  .row{
 		grid-template-columns:100%;
 		grid-template-rows:auto auto;
 	}
@@ -92,25 +115,25 @@ li::before {
 	}
 }
 
-@media screen and (min-width: 600px){
+
+
+
+@media screen and (max-width: 600px){
 	body{
-  	font-size: 14px;
-  	margin-left: auto;
-		margin-right: auto;
+/*  	font-size: 13px;*/
 	}
-	.row{
-		grid-template-columns:repeat(2, 50%);
-		grid-template-rows: auto;
-	}
-	.notes{
-		padding-right: 0;
-		grid-column: 2/3;
-		grid-row: 1/2;
-	}
+	
 }
 
-@media screen and (min-width: 900px){
+@media screen and (min-width: 600px){
 	body{
-		font-size: 20px;
+/*  	font-size: 14px;*/
+	}
+	
+}
+
+@media screen and (max-width: 900px){
+	body{
+/*		font-size: 20px;*/
 	}
 }
