--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body{
 
 #journal{
 	margin: 1em;
+	font-size: 1em;
 	border: 1px solid black;
 	border-bottom: 0;
 	line-height: 1.5;
@@ -36,6 +37,15 @@ body{
 	display: grid;
 	border-bottom: 1px solid #000;
 	padding: var(--verPadding) var(--horiPadding);
+}
+.row{
+		grid-template-columns:repeat(2, 50%);
+		grid-template-rows: auto;
+	}
+.notes{
+	padding-right: 0;
+	grid-column: 2/3;
+	grid-row: 1/2;
 }
 .cell{
   word-wrap: break-word;
@@ -78,16 +88,6 @@ li::before {
 	margin-left:1em;
 }
 
-.row{
-		grid-template-columns:repeat(2, 50%);
-		grid-template-rows: auto;
-	}
-.notes{
-	padding-right: 0;
-	grid-column: 2/3;
-	grid-row: 1/2;
-}
-
 @media all and (max-width: 1400px) {
   body{
     font-size: 17px;
@@ -102,6 +102,10 @@ li::before {
 		grid-template-columns:100%;
 		grid-template-rows:auto auto;
 	}
+	.notes{
+		grid-column: 1/2;
+		grid-row: 2/3;
+	}
 	.infoCont{
 		grid-template-columns: repeat(3, max-content);
 		margin: auto;
@@ -109,31 +113,6 @@ li::before {
 		gap: 1em;
 	}
 	.cell{ padding: 0; }
-	.notes{
-		grid-column: 1/2;
-		grid-row: 2/3;
-	}
-}
-
-
-
-
-@media screen and (max-width: 600px){
-	body{
-/*  	font-size: 13px;*/
-	}
 	
 }
 
-@media screen and (min-width: 600px){
-	body{
-/*  	font-size: 14px;*/
-	}
-	
-}
-
-@media screen and (max-width: 900px){
-	body{
-/*		font-size: 20px;*/
-	}
-}
