--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,16 @@ body{
 	font-family: freeSans-regular;
 	width: 100%;
 	max-width: 1260px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-
-body{
-  font-size: 20px;
-  margin-left: auto;
-	margin-right: auto;
+body, #journal, .cell{
+    font-size: 20px;
 }
 
 #journal{
 	margin: 1em;
-	font-size: 1em;
 	border: 1px solid black;
 	border-bottom: 0;
 	line-height: 1.5;
@@ -39,22 +37,17 @@ body{
 	padding: var(--verPadding) var(--horiPadding);
 }
 .row{
-		grid-template-columns:repeat(2, 50%);
-		grid-template-rows: auto;
-	}
+	grid-template-columns:repeat(2, 50%);
+	grid-template-rows: auto;
+}
 .notes{
 	padding-right: 0;
-	grid-column: 2/3;
-	grid-row: 1/2;
 }
 .cell{
   word-wrap: break-word;
   padding-left: var(--horiPadding);
   padding-right: var(--horiPadding);
   box-sizing: border-box;
-}
-.classday{
-
 }
 .infoCont{
 	display: grid;
@@ -89,22 +82,18 @@ li::before {
 }
 
 @media all and (max-width: 1400px) {
-  body{
+  body, #journal, .cell{
     font-size: 17px;
   }
 }
 
 @media all and (max-width: 800px) {
-  body{
+  body, #journal, .cell{
     font-size: 5px;
   }
   .row{
 		grid-template-columns:100%;
 		grid-template-rows:auto auto;
-	}
-	.notes{
-		grid-column: 1/2;
-		grid-row: 2/3;
 	}
 	.infoCont{
 		grid-template-columns: repeat(3, max-content);
@@ -113,6 +102,5 @@ li::before {
 		gap: 1em;
 	}
 	.cell{ padding: 0; }
-	
 }
 
