--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,19 @@
 	src: url(assets/freeSans-20120503-woff/FreeSansOblique.woff);
 }
 
+
 body{
 	font-family: freeSans-regular;
+	font-size: 20px;
 	width: 100%;
 	max-width: 1260px;
 	margin-left: auto;
 	margin-right: auto;
 }
-
-body, #journal, .notes{
-    font-size: 20px;
+p{
+	margin:0;
+	padding:0;
+	font-size: 1em;
 }
 
 #journal{
@@ -29,7 +32,7 @@ body, #journal, .notes{
 	border: 1px solid black;
 	border-bottom: 0;
 	line-height: 1.5;
-	letter-spacing: 0.02rem;
+	letter-spacing: 0.02em;
 }
 .row{
 	display: grid;
@@ -40,14 +43,15 @@ body, #journal, .notes{
 	grid-template-columns:repeat(2, 50%);
 	grid-template-rows: auto;
 }
-.notes{
-	padding-right: 0;
-}
+
 .cell{
   word-wrap: break-word;
   padding-left: var(--horiPadding);
   padding-right: var(--horiPadding);
   box-sizing: border-box;
+}
+.noteCont{
+	padding-right: 0;
 }
 .infoCont{
 	display: grid;
@@ -56,7 +60,38 @@ body, #journal, .notes{
 .nobr { white-space:nowrap; }
 .date{ padding-left: 0; }
 
-a{
+
+
+@media all and (max-width: 1400px) {
+  body{
+    font-size: 17px;
+  }
+}
+
+@media all and (max-width: 900px) {
+  body{
+    font-size: 13px;
+  }
+  .row{
+		grid-template-columns:100%;
+		grid-template-rows:auto auto;
+	}
+	.infoCont{
+		grid-template-columns: repeat(3, max-content);
+		margin: auto;
+		text-align: center;
+		gap: 1em;
+	}
+	.cell{ padding: 0; }
+}
+
+
+
+
+
+
+
+/*a{
 	font-family: freeSans-italic;
 	color: inherit;
 	cursor: pointer;
@@ -79,28 +114,4 @@ li::before {
 }
 .tab{
 	margin-left:1em;
-}
-
-@media all and (max-width: 1400px) {
-  body, #journal, .notes{
-    font-size: 17px;
-  }
-}
-
-@media all and (max-width: 900px) {
-  body, #journal, .notes{
-    font-size: 13px;
-  }
-  .row{
-		grid-template-columns:100%;
-		grid-template-rows:auto auto;
-	}
-	.infoCont{
-		grid-template-columns: repeat(3, max-content);
-		margin: auto;
-		text-align: center;
-		gap: 1em;
-	}
-	.cell{ padding: 0; }
-}
-
+}*/
