--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
   --verPadding: 0.5em;
   --horiPadding: 0.75em;
 }
+html {
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
 
 @font-face{
 	font-family: freeSans-regular;
@@ -23,14 +28,14 @@ body{
 }
 
 @media all and (max-width: 1400px) {
-  body{
-    font-size: 17px;
+	body{
+		font-size: 17px;
   }
 }
 
 @media all and (max-width: 900px) {
 	body{
-	  font-size: 13px;
+		font-size: 13px;
 	}
 }
 
@@ -77,7 +82,7 @@ p{
 	}
 }
 
-.noteCont{
+.note{
 	padding-right: 0;
 }
 .infoCont{
