--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,21 @@
-html{ font-size: 18px; }
-@media all and (max-width: 1400px) { html{ font-size: 15px; } }
-@media all and (max-width: 900px) { html{ font-size: 13px; } }
 :root{
   --verPadding: 0.4em;
   --horiPadding: 0.6em;
+
+  --font-size-1:18px;
+  --font-size-2:14px;
+  --font-size-3:12px;
+  --font-size-4:9px;
 }
+html{ font-size: var(--font-size-1); }
+@media all and (max-width: 1400px) { html{ font-size: var(--font-size-2); } }
+@media all and (max-width: 900px) { html{ font-size: var(--font-size-3); } }
+
 html {
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 } /* preserves HTML font-size when iPhone orientation changes from portrait to landscape */
-@font-face{
-	font-family: freeSans-regular;
-	src: url(assets/freeSans-20120503-woff/FreeSans.woff);
-}
-@font-face{
-	font-family: freeSans-italic;
-	src: url(assets/freeSans-20120503-woff/FreeSansOblique.woff);
-}
 *{
 	margin: 0;
 	padding: 0;
@@ -25,11 +23,12 @@ html {
 body{
 /*	font-family: freeSans-regular, sans-serif;*/
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+	-webkit-font-smoothing: antialiased;
 	width: 100%;
 	max-width: 1260px;
 	margin-left: auto;
 	margin-right: auto;
-	-webkit-font-smoothing: antialiased;
+	
 }
 #journal{
 	margin: 1em;
@@ -61,10 +60,13 @@ body{
 	}
 }
 
+.classday{
+/*	background-color: whitesmoke;*/
+}
+
 .infoCont{
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	counter-reset: count; 
 }
 @media all and (max-width: 900px) {
 	.infoCont{
@@ -92,19 +94,13 @@ body{
 }
 
 a{
-/*	font-family: freeSans-italic;*/
 	font-style: italic;
 	color: inherit;
 	cursor: pointer;
 	text-decoration: none;
 }
-a::after{ 
-	font-style: normal;
-	font-weight: bold;
-	content: '↗'; 
-}
 a:hover{
-	color: blue;
+	color: red;
 }
 
 
