--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,12 @@
   --font-size-4:9px;
 }
 html{ font-size: var(--font-size-1); }
-@media all and (max-width: 1400px) { html{ font-size: var(--font-size-2); } }
-@media all and (max-width: 900px) { html{ font-size: var(--font-size-3); } }
+@media all and (max-width: 1115px) { html{ font-size: var(--font-size-2); } }
+@media all and (max-width: 875px) { html{ font-size: var(--font-size-3); } }
+@media all and (max-width: 750px) { html{ font-size: var(--font-size-1); } }
+@media all and (max-width: 585px) { html{ font-size: var(--font-size-2); } }
+@media all and (max-width: 455px) { html{ font-size: var(--font-size-3); } }
+/*@media all and (max-width: 900px) { html{ font-size: var(--font-size-3); } }*/
 
 html {
   -webkit-text-size-adjust: 100%;
@@ -28,7 +32,6 @@ body{
 	max-width: 1260px;
 	margin-left: auto;
 	margin-right: auto;
-	
 }
 #journal{
 	margin: 1em;
@@ -36,7 +39,6 @@ body{
 	border-bottom: 0;
 	line-height: 1.25;
 	letter-spacing: 0.015em;
-/*	background-color: yellow;*/
 }
 #title{
 	text-align: center;
@@ -53,7 +55,7 @@ body{
 	grid-template-rows: auto;
 }
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 750px) {
 	.row{
 		grid-template-columns: 100%;
 		grid-template-rows: auto auto;
@@ -68,7 +70,7 @@ body{
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 }
-@media all and (max-width: 900px) {
+@media all and (max-width: 750px) {
 	.infoCont{
 		grid-template-columns: repeat(3, max-content);
 		margin: auto;
@@ -83,7 +85,7 @@ body{
   padding-right: var(--horiPadding);
   box-sizing: border-box;
 }
-@media all and (max-width: 900px) {
+@media all and (max-width: 750px) {
 	.cell{ 
 		padding: 0; 
 	}
