--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root{
-  --verPadding: 0.4em;
-  --horiPadding: 0.6em;
+  --verPadding: 0.3em;
+  --horiPadding: 0.5em;
 
   --font-size-1:18px;
   --font-size-2:14px;
@@ -30,14 +30,13 @@ body{
 	-webkit-font-smoothing: antialiased;
 	width: 100%;
 	max-width: 1260px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 }
 #journal{
 	margin: 1em;
 	border: 1px solid #000;
 	border-bottom: 0;
-	line-height: 1.4;
+	line-height: 1.3;
 	letter-spacing: 0.015em;
 }
 #title{
