--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,22 @@
 :root{
-  --verPadding: 0.3em;
-  --horiPadding: 0.5em;
+  --verPadding: 0.15em;
+  --horiPadding: 0.35em;
 
-  --font-size-1:18px;
-  --font-size-2:14px;
-  --font-size-3:12px;
-  --font-size-4:9px;
+  --font-size-1:22px;
+  --font-size-2:18px;
+  --font-size-3:15px;
+  --font-size-4:13px;
+  --friday-background-color:#000;
+  --friday-color:#fff;
+
 }
 html{ font-size: var(--font-size-1); }
-@media all and (max-width: 1115px) { html{ font-size: var(--font-size-2); } }
-@media all and (max-width: 875px) { html{ font-size: var(--font-size-3); } }
-@media all and (max-width: 750px) { html{ font-size: var(--font-size-1); } }
-@media all and (max-width: 585px) { html{ font-size: var(--font-size-2); } }
-@media all and (max-width: 455px) { html{ font-size: var(--font-size-3); } }
-/*@media all and (max-width: 900px) { html{ font-size: var(--font-size-3); } }*/
+@media all and (max-width: 1240px) { html{ font-size: var(--font-size-2); } } 
+@media all and (max-width: 1010px) { html{ font-size: var(--font-size-3); } } 
+@media all and (max-width: 840px) { html{ font-size: var(--font-size-1); } }
+@media all and (max-width: 620px) { html{ font-size: var(--font-size-2); } }
+@media all and (max-width: 500px) { html{ font-size: var(--font-size-3); } }
+@media all and (max-width: 395px) { html{ font-size: var(--font-size-4); } }
 
 html {
   -webkit-text-size-adjust: 100%;
@@ -25,19 +28,18 @@ html {
 	padding: 0;
 }
 body{
-/*	font-family: freeSans-regular, sans-serif;*/
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 	-webkit-font-smoothing: antialiased;
 	width: 100%;
-	max-width: 1260px;
+/*	max-width: 1400px;*/
 	margin: 0 auto;
 }
 #journal{
-	margin: 1em;
-	border: 1px solid #000;
-	border-bottom: 0;
-	line-height: 1.3;
-	letter-spacing: 0.015em;
+/*	margin: 1em;*/
+	/*border: 1px solid #000;
+	border-bottom: 0;*/
+	line-height: 1.25;
+	letter-spacing: 0.0125em;
 }
 #title{
 	text-align: center;
@@ -51,25 +53,24 @@ body{
 }
 .row{
 	grid-template-columns:repeat(2, 50%);
+/*grid-template-columns: 45% 55%;*/
 	grid-template-rows: auto;
 }
 
-@media all and (max-width: 750px) {
+@media all and (max-width: 840px) {
 	.row{
 		grid-template-columns: 100%;
 		grid-template-rows: auto auto;
 	}
 }
 
-.classday{
-/*	background-color: whitesmoke;*/
-}
-
 .infoCont{
 	display: grid;
+	word-spacing: -0.08em;
 	grid-template-columns: repeat(3, 1fr);
+/*	grid-template-columns: 38% 38% 24%;*/
 }
-/*@media all and (max-width: 750px) {
+/*@media all and (max-width: 840px) {
 	.infoCont{
 		grid-template-columns: repeat(3, max-content);
 		margin: auto;
@@ -78,10 +79,20 @@ body{
 	}
 }*/
 
-@media all and (max-width: 750px) {
+@media all and (max-width: 840px) {
 	.infoCont{
 		grid-template-columns: repeat(3, 1fr);
 		gap: 1em;
+	}
+}
+
+.infoCont .cell{
+	border-right: 1px solid #000;
+}
+
+@media all and (max-width: 840px) {
+	.infoCont .cell{
+		border-right: 0;
 	}
 }
 
@@ -91,7 +102,7 @@ body{
   padding-right: var(--horiPadding);
   box-sizing: border-box;
 }
-@media all and (max-width: 750px) {
+@media all and (max-width: 840px) {
 	.cell{ 
 		padding: 0; 
 	}
@@ -99,6 +110,17 @@ body{
 
 .note{
 	padding-right: 0;
+	word-spacing: -0.07em;
+}
+
+/*.classday{
+	background-color: var(--friday-background-color);
+	color: var(--friday-color);
+}*/
+.classday, .classday .cell{
+/*	border-color: var(--friday-color);*/
+/*border-width: 2px;*/
+/*border-color: rgb(255,50,0);*/
 }
 
 a{
