--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,9 @@ body{
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 	line-height: var(--line-height);
 	-webkit-font-smoothing: antialiased;
-	width: 100%;
-}
-#journal{
 	letter-spacing: 0.0125em;
 }
+
 .row{
 	display: grid;
 	padding: var(--verPadding) var(--horiPadding);
@@ -83,14 +81,12 @@ body{
 }
 
 .infoCont .cell{
-	box-shadow: inset -1px 0 0 #000, inset 0 0 0 #000, inset 0 0 0 #000, inset 0 0 0 #000;
-/*	border-right: var(--border-width) solid #000;*/
+/*	box-shadow: inset -1px 0 0 #000, inset 0 0 0 #000, inset 0 0 0 #000, inset 0 0 0 #000;*/
 }
 
 @media all and (max-width: 840px) {
 	.infoCont .cell{
 		box-shadow: none;
-/*		border-right: 0;*/
 	}
 }
 
@@ -107,7 +103,7 @@ body{
 
 .note{
 	padding-right: 0;
-	word-spacing: -0.05em;
+/*	word-spacing: -0.05em;*/
 }
 
 /*.classday{
