--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,10 @@ body{
 	}
 }
 
-.row:last-child{
+/*.row:last-child{
 	padding-block: 1px;
 	box-shadow: inset 0 0 0 #000, inset 0 -1px 0 #000, inset 0 0 0 #000, inset 0 1px 0 #000;
-}
+}*/
 
 .infoCont{
 	display: grid;
