--- a/old/styles.css
+++ b/old/styles.css
@@ -1,7 +1,7 @@
 :root {
 /*  --main-color: #e0d290;*/
   --main-color: #fff;
-  --spacing: 0.1em;
+  --spacing: 0.3em;
 }
 body {
 /*	line-height: 1.2;*/
@@ -29,8 +29,8 @@ body {
   box-sizing: border-box;
 }
 .classday{
-	background-color: #000;
-	color: var(--main-color);
+/*	background-color: #000;*/
+/*	color: var(--main-color);*/
 }
 .infoCont{
 	display: grid;
@@ -123,7 +123,7 @@ li::before {
 		padding-bottom: 0;
 	}
 	.info{
-/*		border-right: 1px solid #000;*//
+/*		border-right: 1px solid #000;*/
 		border-bottom: 0px;
 	}
 	.classday .info{
